fixed issue with multiple words in a table cell stretching the box vertically

--- a/src/assets/styles/_gameTable.scss
+++ b/src/assets/styles/_gameTable.scss
@@ -63,9 +63,10 @@
           text-align: center;
           background-color: lightgrey;
           position: relative;
-          overflow-x: hidden;
+          // overflow-x: hidden;
           text-overflow: ellipsis;
-          overflow-wrap: normal;
+          overflow: hidden;
+          white-space: nowrap;
 
           .remove-btn {
             display: flex;
